--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "groq-sdk": "^0.37.0",
     "multer": "^2.0.1",
     "openai": "^5.9.2",
     "pdf-parse": "^1.1.1"
